XXX XXX XX XX:XX:XX UTC 201X

        1.1 release.

        Changes

        New features

        - 'automate atttributes' now also works without a workspace
          and returns the attributes for a specific file from the
          revision's manifest

        - New 'min(A)' selector is now available which returns all
          revisions selected by A which are not descendants of other
          revisions selected by A.

        - New 'not(A)' selector is now available which returns all
          revisions not selected by 'A'.

        - All certs for a revision are now output by 'mtn log' with
          'suspend', 'testresult', and custom certs placed under a
          a new 'Other certs' heading.
           
        Bugs fixed

        - Monotone now compiles against Botan 1.10.x (as well as most of
          the testing releases in 1.9.y).

        - Struct file_handle got renamed to avoid clash with newer glibc's
          fcntl.h.

        - Monotone now compiles just fine with gcc's option
          "-Werror=format-security."

        - Fixed recursive file removal on Solaris.

        Internal

        - The performance and memory usage of regular expressions has
          been improved throughout. This affects any use of the
          ".mtn-ignore" file such as "mtn ls unknown" and "mtn add",
          and any calls to "regex.search" in Lua hooks.

        Other

        - 'mtn diff' now outputs old and new revision IDs in the diff header
           when both are specified.

Sat Mar 26 10:53:47 UTC 2011

        1.0 release.

        Changes

        - The database scheme was changed; please execute 'mtn db migrate'
          on all your local and remote databases.

        - In 'mtn conflicts resolve_first interactive', the result
          file name now defaults to _MTN/resolutions/<left_path>.
          (fixes monotone issue 103)

        - The French monotone translation has been updated and is